--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,15 @@
   text-align: center;
 }
 
+@media only screen and (max-width: 600px) {
+  .App {
+    max-width: 550px;
+  }
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
